# easy_io

./: Cargo.toml  README.md
src/: input_reader  input_reader.rs  lib.rs  output_writer.rs
