[package]
name = "easy_io"
version = "0.2.2"
license = "MIT"
authors = ["Axel Lindeberg"]
description = "Fast and dead-simple IO for competitive programming in Rust"
readme = "README.md"
homepage = "https://github.com/AxlLind/easy_io"
repository = "https://github.com/AxlLind/easy_io"
keywords = ["io"]
categories = ["text-processing", "io", "competitive-programming"]
